BUGFIX: missing 'position:relative' on the image-panel-caption block caused any link applied to the image to spill over to the entire page if you use this block in a sidebar layout.

--- a/jetstream/static/jetstream/css/blocks/image-panel-caption.scss
+++ b/jetstream/static/jetstream/css/blocks/image-panel-caption.scss
@@ -1,6 +1,7 @@
 .image-panel-caption {
   overflow: hidden;
   margin-bottom: 2em;
+  position: relative;
   @include responsive-images-inside;
 
   &__image-link {
